config/k8s/mlflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coelho-realtime-mlflow-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: coelho-realtime-mlflow.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: coelho-realtime-mlflow-service
            port:
              number: 5000
